# CPI-Calculator-Web

./: Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: docker-publish.yml  rust.yml
assets/: sw.js
src/: app.rs  functions.rs  lib.rs  main.rs
src/app/: functions.rs  semdata.rs
static/: index.html  style.css
