[package]
name = "cpi-calculator-web"
version = "0.1.0"
edition = "2021"
authors = ["Sridhar Tuli <sridhartuli@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"] # Added cdylib for WASM

[dependencies]
yew = { version = "0.21", features = ["csr"] } # Added Yew
wasm-bindgen = "0.2" # Added wasm-bindgen
web-sys = "0.3" # Added web-sys for browser APIs
lazy_static = "1.4.0" # Keep for now, might remove later
getrandom = { version = "0.2", features = ["js"] } # Needed for wasm-bindgen/web-sys features
